# vs-wheels

./: .gersemirc  .gitmodules  DEVELOPMENT.md  README.md  justfile  pyproject.toml  vs-wheels.code-workspace
.github/: renovate.json
.github/actions/setup-cuda-linux/: action.yml
.github/actions/setup-cuda-windows/: action.yml
.github/actions/setup-hip-linux/: action.yml
.github/actions/setup-hip-windows/: action.yml
.github/workflows/: bm3dcpu.yml  bm3dcuda.yml  bm3dhip.yml  dfttest2.yml  dfttest2_cpu.yml  dfttest2_cuda.yml  dfttest2_gcc.yml  dfttest2_hip.yml  dfttest2_hiprtc.yml  dfttest2_nvrtc.yml  fmtc.yml  publish.yml  update-index.yml  upload-release.yml
bm3dcuda/bm3dcpu/: CMakeLists.txt  Common.cmake  README.md  arch_configs.json  manifest.vs  pyproject.toml
bm3dcuda/bm3dcuda/: CMakeLists.txt  DEVELOPMENT.md  README.md  pyproject.toml
bm3dcuda/bm3dhip/: CMakeLists.txt  DEVELOPMENT.md  README.md  pyproject.toml
dfttest2/dfttest2/: README.md  pyproject.toml
dfttest2/dfttest2/dfttest2/: __init__.py
dfttest2/dfttest2_cpu/: CMakeLists.txt  README.md  pyproject.toml
dfttest2/dfttest2_cuda/: CMakeLists.txt  README.md  manifest.vs  pyproject.toml
dfttest2/dfttest2_gcc/: CMakeLists.txt  README.md  pyproject.toml
dfttest2/dfttest2_hip/: CMakeLists.txt  README.md  manifest.vs  pyproject.toml
dfttest2/dfttest2_hiprtc/: CMakeLists.txt  README.md  manifest.vs  pyproject.toml
dfttest2/dfttest2_nvrtc/: CMakeLists.txt  README.md  pyproject.toml
fmtc/: hatch_build.py  pyproject.toml
scripts/: Add-Submodule.ps1  Enter-DevShell.ps1  generate_index.py
