[build-system]
requires = ["hatchling==1.29.0", "packaging==26.2", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "vapoursynth-fmtconv"
description = "Format conversion tools for Vapoursynth and Avisynth+"
requires-python = ">=3.12"
readme = "fmtconv/README.md"
license = "WTFPL"
license-files = ["fmtconv/COPYING"]
authors = [{ name = "Laurent de Soras", email = "laurent.de.soras@free.fr" }]
maintainers = [
    { name = "Laurent de Soras", email = "laurent.de.soras@free.fr" },
]

dependencies = ["vapoursynth>=74"]

[dependency-groups]
dev = ["hatchling==1.29.0", "packaging==26.2"]

[project.urls]
"Source Code" = "https://gitlab.com/EleonoreMizo/fmtconv"
"Bug Tracker" = "https://gitlab.com/EleonoreMizo/fmtconv/-/work_items/"
"Repository" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-wheels"

[tool.hatch.version]
source = "vcs"
tag-pattern = '^r(?P<version>.*)$'

[tool.hatch.version.raw-options]
root = "fmtconv"
search_parent_directories = true
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = ["fmtconv"]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins"]
artifacts = [
    "vapoursynth/plugins/*.dylib",
    "vapoursynth/plugins/*.so",
    "vapoursynth/plugins/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.cibuildwheel]
build-frontend = { name = "build[uv]", args = ["--verbose"] }
build = "cp312-*"
skip = "*-win32 *-manylinux_i686"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["native"]
environment = { MACOSX_DEPLOYMENT_TARGET = "13.0" }
before-all = "brew install autoconf automake libtool"

[tool.cibuildwheel.linux]
archs = ["native"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
repair-wheel-command = "auditwheel repair --strip -w {dest_dir} {wheel}"
