[build-system]
requires = [
    "scikit-build-core>=0.12",
    "setuptools-scm",
    "ninja ; sys_platform != 'windows'",
]
build-backend = "scikit_build_core.build"

[project]
name = "vapoursynth-bm3dcpu"
dynamic = ["version", "readme"]
description = "BM3D denoising filter for VapourSynth, implemented in AVX2"
license = "GPL-2.0-or-later"
license-files = ["VapourSynth-BM3DCUDA/LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "WolframRhodium" }]
maintainers = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
dependencies = ["vapoursynth>=74"]

[project.urls]
"Source Code" = "https://github.com/WolframRhodium/VapourSynth-BM3DCUDA"
"Bug Tracker" = "https://github.com/WolframRhodium/VapourSynth-BM3DCUDA/issues"

[tool.setuptools_scm]
root = "VapourSynth-BM3DCUDA"
local_scheme = "no-local-version"
tag_regex = "^R(?P<version>.*)$"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"
wheel.exclude = ["*.lib"]
wheel.install-dir = "vapoursynth/plugins/bm3dcpu"
wheel.expand-macos-universal-tags = true
wheel.py-api = "py3"
cmake.source-dir = "."
cmake.args = ["-G", "Ninja"]
cmake.define.CMAKE_BUILD_TYPE = "Release"
cmake.define.BM3D_MULTI_TARGET = "OFF"
ninja.make-fallback = false
ninja.version = ">=1.5"

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.define.CMAKE_MSVC_RUNTIME_LIBRARY = "MultiThreaded"
cmake.define.CMAKE_CXX_COMPILER = "clang++.exe"

[[tool.scikit-build.overrides]]
if.env.CIBUILDWHEEL = true
cmake.define.BM3D_MULTI_TARGET = "ON"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
    { path = "VapourSynth-BM3DCUDA/README.md" },
]

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = "cp312-*"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
