[build-system]
requires = [
    "scikit-build-core>=0.12",
    "setuptools-scm",
    "ninja ; sys_platform != 'win32'",
]
build-backend = "scikit_build_core.build"

[project]
name = "vapoursynth-bm3dcuda"
dynamic = ["version", "readme"]
description = "BM3D denoising filter for VapourSynth, implemented in CUDA"
license = "GPL-2.0-or-later"
license-files = ["VapourSynth-BM3DCUDA/LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "WolframRhodium" }]
maintainers = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
dependencies = ["vapoursynth>=74"]

[project.urls]
"Source Code" = "https://github.com/WolframRhodium/VapourSynth-BM3DCUDA"
"Bug Tracker" = "https://github.com/WolframRhodium/VapourSynth-BM3DCUDA/issues"

[tool.setuptools_scm]
root = "VapourSynth-BM3DCUDA"
local_scheme = "no-local-version"
tag_regex = "^R(?P<version>.*)$"

[tool.scikit-build]
logging.level = "INFO"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"
wheel.exclude = ["*.lib"]
wheel.install-dir = "vapoursynth/plugins/bm3dcuda"
wheel.expand-macos-universal-tags = true
wheel.py-api = "py3"
cmake.source-dir = "."
build.verbose = true
cmake.args = ["-G", "Ninja"]
cmake.define.CMAKE_BUILD_TYPE = "Release"
cmake.define.CMAKE_INSTALL_BINDIR = "."
cmake.define.CMAKE_INSTALL_LIBDIR = "."
cmake.define.USE_NVRTC_STATIC = "ON"
cmake.define.ENABLE_CPU = "OFF"
cmake.define.ENABLE_CUDA = "ON"
cmake.define.CMAKE_CUDA_FLAGS = "--threads 0 --use_fast_math --resource-usage -Wno-deprecated-gpu-targets"
ninja.make-fallback = false
ninja.version = ">=1.5"

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
inherit.cmake.define = "append"
cmake.define.CMAKE_MSVC_RUNTIME_LIBRARY = "MultiThreaded"
cmake.define.CMAKE_CXX_FLAGS = "/fp:fast /arch:AVX /EHsc"
cmake.define.CMAKE_CUDA_ARCHITECTURES = "75;86-real;89-real;120-real"

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
inherit.cmake.define = "append"
cmake.define.CMAKE_CUDA_ARCHITECTURES = "75;86-real;89-real;90-real;100-real;120-real"

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "x86_64"
inherit.cmake.define = "append"
cmake.define.CMAKE_CXX_FLAGS = "-Wall -ffast-math -march=x86-64-v3"

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "aarch64"
inherit.cmake.define = "append"
cmake.define.CMAKE_CXX_FLAGS = "-Wall -ffast-math"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
    { path = "VapourSynth-BM3DCUDA/README.md" },
]
