[build-system]
requires = [
    "scikit-build-core>=0.12",
    "setuptools-scm",
    "ninja ; sys_platform != 'win32'",
]
build-backend = "scikit_build_core.build"

[project]
name = "vapoursynth-dfttest2_cuda"
dynamic = ["version", "readme"]
description = "A VapourSynth re-implementation of DFTTest, using NVIDIA cuFFT for GPU acceleration."
license = "GPL-2.0-or-later"
license-files = ["vs-dfttest2/LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "WolframRhodium" }]
maintainers = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
dependencies = ["vapoursynth>=75"]

[project.urls]
"Source Code" = "https://github.com/AmusementClub/vs-dfttest2"
"Bug Tracker" = "https://github.com/AmusementClub/vs-dfttest2/issues"
"Repository" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-wheels"

[tool.setuptools_scm]
root = "vs-dfttest2"
local_scheme = "no-local-version"
tag_regex = '^v(?P<version>\d+.*)$'

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"
wheel.exclude = ["*.lib"]
wheel.install-dir = "vapoursynth/plugins/dfttest2_cuda"
wheel.expand-macos-universal-tags = true
wheel.py-api = "py3"
cmake.source-dir = "."
cmake.args = ["-G", "Ninja"]
cmake.define.CMAKE_BUILD_TYPE = "Release"
ninja.make-fallback = false
ninja.version = ">=1.5"

[[tool.scikit-build.overrides]]
if.platform-system = "^win32"
inherit.cmake.define = "append"
cmake.define.CMAKE_MSVC_RUNTIME_LIBRARY = "MultiThreaded"
cmake.define.CMAKE_CXX_FLAGS = "/fp:fast /EHsc"
cmake.define.CMAKE_SHARED_LINKER_FLAGS = "/DELAYLOAD:cufft64_12.dll"

[[tool.scikit-build.overrides]]
if.platform-system = "^linux"
inherit.cmake.define = "append"
cmake.define.CMAKE_CXX_COMPILER = "g++"
cmake.define.CMAKE_CXX_FLAGS = "-Wall -ffast-math"

[[tool.scikit-build.overrides]]
if.platform-machine = "^aarch64"
inherit.cmake.define = "append"
cmake.define.CMAKE_CXX_COMPILER = "clang++"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }, { path = "vs-dfttest2/README.md" }]
